--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@
     margin-top: 1rem;
     border-bottom: 3px solid black;
 }
+/* 모바일 햄버거 메뉴 및 검색 */
 #input-area{
     display: none;
 }
@@ -72,8 +73,9 @@
 }
 .hide{
     display: none;
-}
-@media screen and (max-width: 450px) {
+}  /* 모바일 햄버거 메뉴 및 검색*/
+
+@media screen and (max-width: 450px) { 
     .menus{
         display: none;
     }
@@ -84,4 +86,3 @@
 .icon-button{
     margin: 1rem;
 }
-    
